--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "git-searching",
+  "name": "git--searching-react",
   "version": "1.3.0",
+  "homepage": "https://apacholik.github.io/git-searching-react/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
     "bulma": "^0.7.2",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -14,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "@callstack"
